Fix collapse card height

--- a/src/scss/helpers/modifiers.scss
+++ b/src/scss/helpers/modifiers.scss
@@ -1,9 +1,3 @@
-.card-content.is-hidden {
-  overflow: hidden;
-  height: 0;
-  margin: 0 !important;
-}
-
 .mb-2 {
   margin-bottom: 2rem !important;
 }
